# EKA2L1_IOS

./: .gitignore  CMakeLists.txt  README.md  build_ios.sh
.github/ios-build/ffmpeg/: build-ios-device.sh  build-ios-sim.sh
.github/ios-build/patches/: cubeb.patch  ffmpeg.patch  fmt.patch  oaknut.patch
.github/workflows/: ios-ipa.yml
src/emu/: CMakeLists.txt
src/emu/common/include/common/: platform.h
src/emu/common/src/: arm_cpudetect.cpp  fileutils.cpp  log.cpp  types.cpp  virtualmem.cpp
src/emu/config/include/config/: config.h  options.inl
src/emu/cpu/include/cpu/dyncom/: arm_dyncom.h
src/emu/cpu/src/dyncom/: arm_dyncom.cpp
src/emu/cpu/src/dyncom/vfp/: vfpsingle.cpp
src/emu/drivers/: CMakeLists.txt
src/emu/drivers/include/drivers/audio/backend/ios/: audio_ios.h
src/emu/drivers/include/drivers/audio/backend/minibae/machine/: types.h
src/emu/drivers/include/drivers/graphics/: context.h
src/emu/drivers/include/drivers/hwrm/: vibration.h
src/emu/drivers/include/drivers/hwrm/backend/ios/: vibration_ios.h
src/emu/drivers/include/drivers/sensor/: sensor.h
src/emu/drivers/src/audio/backend/cubeb/: audio_cubeb.cpp
src/emu/drivers/src/audio/backend/ios/: audio_ios.mm
src/emu/drivers/src/graphics/: context.cpp
src/emu/drivers/src/graphics/backend/: context_eagl.h  context_eagl.mm
src/emu/drivers/src/graphics/backend/ogl/: fb_ogl.cpp  graphics_ogl.cpp  texture_ogl.cpp
src/emu/drivers/src/hwrm/: vibration.cpp
src/emu/drivers/src/hwrm/backend/ios/: vibration_ios.mm
src/emu/drivers/src/sensor/: sensor.cpp
src/emu/drivers/src/sensor/backend/ios/: sensor_ios.h  sensor_ios.mm
src/emu/ios/: CMakeLists.txt  README.md
src/emu/ios/app/: AppDelegate.h  AppDelegate.mm  EmulatorView.h  EmulatorView.mm  GameControlsView.h  GameControlsView.mm  GameMenuView.h  GameMenuView.mm  GameSettingsStore.h  GameSettingsStore.mm  GameSettingsViewController.h  GameSettingsViewController.mm  HiddenAppsViewController.h  HiddenAppsViewController.mm  Info.plist  InputManager.h  InputManager.mm  KeybindCaptureViewController.h  KeybindCaptureViewController.mm  KeybindEditorViewController.h  KeybindEditorViewController.mm  KeybindStore.h  KeybindStore.mm  LayoutEditorViewController.h  LayoutEditorViewController.mm  PackageListViewController.h  PackageListViewController.mm  RootViewController.h  RootViewController.mm  SyncManager.h  SyncManager.mm  SyncViewController.h  SyncViewController.mm  eka2l1.entitlements  main.mm
src/emu/ios/app/AppIcon.icon/: icon.json
src/emu/ios/include/ios/: emu_bridge.h  emu_window_ios.h  input_dialog.h  launcher.h  state.h  thread.h
src/emu/ios/src/: applauncher.mm  emu_bridge.mm  emu_window_ios.cpp  input_dialog.cpp  launcher.cpp  state.cpp  thread.cpp
src/emu/kernel/include/kernel/: kernel.h
src/emu/kernel/src/: kernel.cpp  libmanager.cpp
src/emu/loader/include/loader/: rom.h
src/emu/loader/src/: rom.cpp
src/emu/mem/include/mem/: control.h
src/emu/mem/src/model/flexible/: chunk.cpp  memobj.cpp  process.cpp
src/emu/package/src/: manager.cpp
src/emu/services/src/fs/: fs.cpp
src/emu/system/include/system/: devices.h
src/emu/system/src/: devices.cpp  epoc.cpp
